# Protenix

./: .gitignore  pixi.toml  pyproject.toml  requirements.txt
protenix/data/esm/: compute_esm.py
protenix/data/inference/: infer_dataloader.py
protenix/data/pipeline/: dataset.py
runner/: inference.py
tests/: test_dataset_vectorization.py  test_esm_loading.py
